Замена одного DTO на два: запросный и ответный
